# g3m-scale

./: .gitignore  README.md  pyproject.toml  setup.py
configs/: train_qm9_sp.yaml
data/qm9/: splits.json
data/qm9/preprocessed/: test_infos.json  val_infos.json
g3m.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
logs/qm9/runs/2025-11-29_15-04-15/.hydra/: hydra.yaml
logs/qm9/runs/2025-11-29_15-04-15/wandb/: latest-run
logs/qm9/runs/2025-11-29_18-53-51/.hydra/: hydra.yaml
logs/qm9/runs/2025-11-29_18-53-51/wandb/: latest-run
logs/qm9/runs/2025-11-29_18-56-58/.hydra/: hydra.yaml
logs/qm9/runs/2025-11-29_18-56-58/wandb/: latest-run
logs/qm9/runs/2025-11-29_19-01-39/.hydra/: hydra.yaml
logs/qm9/runs/2025-11-29_19-01-49/.hydra/: hydra.yaml
logs/qm9/runs/2025-11-29_19-01-49/wandb/: latest-run
logs/qm9/runs/2025-11-30_12-09-29/.hydra/: hydra.yaml
logs/qm9/runs/2025-11-30_12-11-14/.hydra/: hydra.yaml
logs/qm9/runs/2025-11-30_12-11-14/wandb/: latest-run
outputs/2025-12-02/19-19-10/.hydra/: hydra.yaml
outputs/2025-12-02/19-19-24/.hydra/: hydra.yaml
scripts/: preprocess_qm9.py
src_gmmm/: eval.py  train.py
src_gmmm/data/: datamodule.py  dataset.py  transforms.py  utils.py
src_gmmm/lit/: module.py
src_gmmm/metrics/: base.py  bonds.py  qm9.py  rdkit_utils.py
src_gmmm/model/: continuous.py  diffusion.py  distributions.py  score.py  thoughts.txt
src_gmmm/nn/: encoder.py  layers.py  readout.py
src_gmmm/nn_coarsen/: coarsen.py  utils.py
src_gmmm/utils/: __init__.py  callback.py  ops.py  rich_utils.py  utils.py
(+136 files in other folders)
